# urc-control-system-2023

./: .clangd  .gitignore  README.md  format.sh
arm/: CMakeLists.txt  CMakeUserPresets.json  arm_common.ld  arm_toolchain.cmake  conanfile.py  conanfile.txt  error.txt  hardware_map.hpp  main.cpp
arm/applications/: app-serial.cpp  app-wifi.cpp  app.cpp  app_serial.cpp  app_wifi.cpp  application.cpp  application.hpp  arm-demo.cpp  arm.cpp  arm_demo.cpp  arm_mission_control.cpp  arm_serial.cpp  events.cpp  mimic-mc-demo.cpp  mission_control.hpp  mpu-demo.cpp  pca-demo.cpp  pca_demo.cpp  serial-demo.cpp
arm/calibrate_mpu/: CMakeLists.txt
arm/demos/: CMakeLists.txt  conanfile.py  hardware_map.hpp  main.cpp
arm/demos2/: CMakeLists.txt  conanfile.py
arm/dto/: arm-dto.hpp  arm_dto.hpp  feedback-dto.hpp  feedback_dto.hpp
arm/endofactor_demo/: CMakeLists.txt  conanfile.py  hardware_map.hpp
arm/esp_test/: CMakeLists.txt  conanfile.py
arm/homing_demo/: CMakeLists.txt
arm/implementation/: joint_router.hpp  mission-control-handler.hpp  rules-engine.hpp
arm/implementations/: arm.hpp  home.hpp  joint_router.hpp  mission_control_handler.hpp  rules_engine.hpp  speed_control.hpp
arm/platform-implementations/: constants.hpp  esp8266_mission_control.cpp  esp8266_mission_control.hpp  feedback_getter.hpp  geared_servo.cpp  geared_servo.hpp  helper.hpp  home.hpp  mission_control.hpp  offset_servo.hpp  promise.hpp  rmd_mcx_configurer.cpp  rmd_mcx_configurer.hpp  serial_mission_control.cpp
arm_mimic/: CMakeLists.txt  conanfile.py  main.cpp
arm_mimic/applications/: application.cpp  application.hpp
arm_mimic/demos/: CMakeLists.txt  conanfile.py  main.cpp  tla2528_demo.cpp  tla2528_demo.hpp
arm_mimic/implementations/: degree_manipulation.hpp  mission_control_handler.hpp  tla2528.hpp
code/: CMakeLists.txt  README.md  conanfile.py  hardware_map.hpp
code/applications/: app.cpp  app_serial.cpp  arm.cpp  arm_demo.cpp  arm_serial.cpp  co2_sensor_demo.cpp  drive.cpp  drive_serial.cpp  magnet_demo.cpp  pump_demo.cpp  rmd_demo.cpp  science.cpp  serial_demo.cpp
code/common/: esp_helper.hpp
drive/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  conanfile.txt  hardware_map.hpp  main.cpp
drive/ackermann_demo/: CMakeLists.txt
drive/applications/: ackermann.cpp  app.cpp  app_serial.cpp  application.cpp  application.hpp  magnet-demo.cpp  rmd-demo.cpp  rmd_demo.cpp  serial-demo.cpp  serial_demo.cpp
drive/demos/: CMakeLists.txt  application.hpp  conanfile.py  main.cpp
drive/dto/: drive-dto.hpp  drive.hpp  motor-feedback-dto.hpp  motor_feedback.hpp
drive/implementation/: command-lerper.hpp  mission-control-handler.hpp  mode-select.hpp  mode-switcher.hpp  mode_select.hpp  rules-engine.hpp  rules_engine.hpp  serial.hpp  steer-modes.hpp  tri-wheel-router.hpp
drive/implementations/: ackermann_steering.hpp  command_lerper.cpp  command_lerper.hpp  drive_configuration.cpp  drive_configuration_updater.cpp  drive_debug.cpp  led_controller.cpp  led_strip_controller.cpp  mode_select.hpp  mode_switcher.cpp  mode_switcher.hpp  rules_engine.hpp  serial_frame.hpp  sk9822.cpp  steer_modes.hpp  tcp_client.hpp  tri_wheel_router.cpp  tri_wheel_router.hpp  vector_2.hpp  wheel_router.cpp
drive/include/: ackermann_steering.hpp  command_lerper.hpp  drc_speed_sensor.hpp  drive_configuration.hpp  drive_configuration_updater.hpp  drive_debug.hpp  esp8266_mission_control.hpp  esp_tcp_client.hpp  http_mission_control.hpp  mission_control.hpp  mode_switcher.hpp  offset_servo.hpp  pwm_relay.hpp  rules_engine.hpp  serial_mission_control.hpp  settings.hpp  sk9822.hpp  speed_sensor.hpp  tcp_client.hpp  tri_wheel_router.hpp  vector2.hpp  wheel_router.hpp
drive/platform-implementations/: ackermann_steering.cpp  ackermann_steering.hpp  calibration_settings.hpp  crc.hpp  drc_position_speed_servo.cpp  drc_position_speed_servo.hpp  drc_speed_sensor.cpp  drc_speed_sensor.hpp  drive_mission_control.cpp  esp8266_mission_control.cpp  esp_tcp_client.cpp  esp_tcp_client.hpp  feedback_getter.hpp  hall_effect.cpp  hall_effect.hpp  helper.hpp  home.hpp  http_mission_control.cpp  mission_control.hpp  offset_servo.cpp  offset_servo.hpp  output_pin_relay.cpp  output_pin_relay.hpp  position_speed_servo.hpp  position_speed_servo_offset.cpp  position_speed_servo_offset.hpp  print_mission_control.hpp  print_motor.hpp  print_servo.hpp  print_speed_sensor.hpp  pwm_relay.cpp  pwm_relay.hpp  relay.hpp  serial_frame.hpp  serial_mission_control.cpp  speed_sensor.hpp  tcp_client.hpp  vector_2.cpp  vector_2.hpp
drive/soft-driver/: rmd-encoder.hpp
drive/src/: drc_speed_sensor.hpp  util.hpp
science/: CMakeLists.txt  CMakeUserPresets.json  README.md  application.cpp  application.hpp  conanfile.py  conanfile.txt  hardware_map.hpp  libhal.tweaks.hpp  main.cpp
science/applications/: app.cpp  application.cpp  application.hpp  co2_sensor_demo.cpp  hall_effect_sensor_demo.cpp  methane_sensor_demo.cpp  parallax_servo_demo.cpp  pump_demo.cpp  pump_pwm_demo.cpp  science.cpp  science_state_machine.cpp  science_state_machine.hpp  seal_test.cpp
science/demos/: CMakeLists.txt  conanfile.py  hardware_map.hpp  main.cpp  methan_sensor.hpp  methane_sensor.hpp  pump_demo.hpp
science/dto/: science-dto.cpp  science_dto.cpp  science_dto.hpp
science/implementations/: co2_sensor.hpp  generic_adc_sensor.hpp  inject.hpp  mission_control_handler.hpp  move_revolver.hpp  mq4_methane_sensor.hpp  pressure_sensor_driver.hpp  pump_controller.hpp  pwm_controller.hpp  safe_pwm.hpp  seal.hpp  state_machine.hpp  suck.hpp
science/libhal-bash-scripts/: .README.md  build_debug_windows.sh  build_debug_wsl.sh
science/libhal_configuration/: hardware_map.hpp  initializer.cpp
science/platform-implementations/: adc_sensor.hpp  co2_sensor_sc40.cpp  color_sensor_opt4048.cpp  color_sensor_opt4048.hpp  esp8266_mission_control.cpp  methane_sensor_mq4.cpp  mission_control.hpp  perstaltic-pump.hpp  pressure_sensor.hpp  pressure_sensor_bme680.cpp  pressure_sensor_bme680.hpp  (+11 more)
tests/: CMakeLists.txt  README.md  conanfile.txt  main.test.cpp  project.test.cpp  run.sh
(+141 files in other folders)
